--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         margin: 0 0.5rem;
         width: 70%;
         border: 3px solid #4F4F4F;
-        border-radius: 2px;
+        border-radius: 3px;
+        background-color: #0c0c0c;
+        color: #fcfafa;
       }
       .input:active,
       .input:focus {
@@ -65,10 +67,10 @@
 
       .btn {
         padding: 0.5rem;
-        background-color: #5fcefa;
-        border: 1px solid #06b8ff;
+        background-color: #778899;
+        border: 1px solid #1C1C1C;
         border-radius: 5px;
-        color: #696969;
+        color: #fcfafa;
         font-weight: 600;
       }
       .center {
@@ -80,7 +82,7 @@
       }
       /* default message styling for server notifications */
       .message {
-        background-color: rgb(112, 128, 144);
+        background-color: #DCDCDC;
         color: #333;
         font-size: 1.2rem;
         text-align: center;
@@ -101,7 +103,7 @@
   </head>
   <body>
     <div id="app">
-      <h1 class="center">Chatzin dos cria</h1>
+      <h1 class="center">Chatzin dos Cria</h1>
 
       
       
@@ -118,3 +120,5 @@
     </div>
   </body>
 </html>
+
+//
